--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "serveJson": "concurrently \" json-server db.json \" \" ng serve \"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:app-event": "node dist/app-event/server/server.mjs"
@@ -37,6 +38,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "concurrently": "^9.1.2",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
